Fixed tabs on home screen being too tall, and refixed issue with notification icon that was causing home page to display the wrong icon.

--- a/public/filtermenu.css
+++ b/public/filtermenu.css
@@ -1,6 +1,3 @@
-.dropdown-item {
-    left: 50pt;
-}
 
 /* #filterMenu li > button {
     display: block;
